# tesseract-sys

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs  wrapper.h
docs/: 3RD-PARTY-LICENSES.md
extra/: extraapi.cpp  extraapi.h
src/: lib.rs
